--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Korean-English Trainer</title>
+    <meta name="description" content="Site for training korean-english word translations">
+    <meta name="keywords" content="Korea, Korean Language, English, translation, words">
+    <meta name="author" content="Ryszard Swiech">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Korean-English Trainer</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
